Add Search functions

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "contentful": "^10.13.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.2"
   },
   "devDependencies": {
     "@contentful/rich-text-types": "^16.8.3",
