--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.5.0",
     "use-debounce": "^10.0.2"
   },
   "devDependencies": {
