--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material-nextjs": "^5.16.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "contentful": "^10.13.1",
     "next": "14.2.5",
     "react": "^18",
